--- a/portfolio.html
+++ b/portfolio.html
@@ -20,42 +20,37 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <div class="container">
         <nav class="list header-nav">
-          <a href="./index.html" class="header-logo link list"
-            >Web<span class="logo-span">Studio</span></a
-          >
+          <a href="./index.html" class="header-logo-link link list">Web<span class="logo-span">Studio</span>
+          </a>
           <ul class="list header-list">
             <li class="header-menu-item">
-              <a href="./index.html" class="link header-item">Studio</a>
+              <a class="link header-menu-link" href="./index.html">Studio</a>
             </li>
             <li class="header-menu-item">
-              <a href="./portfolio.html" class="link header-item current"
-                >Portfolio</a
-              >
+              <a class="link header-menu-link current" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="header-menu-item">
-              <a href="" class="link header-item">Contacts</a>
+              <a href="#" class="link header-menu-link">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="address">
           <ul class="list header-list">
-            <li class="header-address">
-              <a href="mailto:info@devstudio.com" class="link header-item"
-                >info@devstudio.com</a
-              >
+            <li class="header-address-item">
+              <a class="link header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="header-address">
-              <a href="tel:+110001111111" class="link header-item"
-                >+11 (000) 111-11-11</a
-              >
+              <a class="link header-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
       </div>
     </header>
+    <!-- Main -->
     <main>
       <section class="section-portfolio">
         <div class="container">
@@ -81,9 +76,9 @@
           <!-- IMAGES -->
           <ul class="list portfolio-list">
             <li class="img-portfolio">
-              <a href="" class="link portfolio-cards">
+              <a href="#" class="link portfolio-cards">
                 <div class="container-img-portfolio">
-                  <img src="./images/img-docs.jpg" alt="photo" width="360" />
+                  <img src="./images/img-docs.jpg" alt="photo" width="360">
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -93,13 +88,13 @@
                 <div class="container-portfolio">
                   <h2 class="portfolio-title">Banking App Interface Concept</h2>
                   <p class="portfolio-paragraph">App</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="img-portfolio">
-              <a href="" class="link portfolio-cards"
-                ><div class="container-img-portfolio">
-                  <img src="./images/img-docs-2.jpg" alt="photo" width="360" />
+              <a href="#" class="link portfolio-cards">
+                <div class="container-img-portfolio">
+                  <img src="./images/img-docs-2.jpg" alt="photo" width="360">
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -109,13 +104,13 @@
                 <div class="container-portfolio">
                   <h2 class="portfolio-title">Cashless Payment</h2>
                   <p class="portfolio-paragraph">Marketing</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="img-portfolio">
-              <a href="" class="link portfolio-cards"
-                ><div class="container-img-portfolio">
-                  <img src="./images/img-docs-3.jpg" alt="photo" width="360" />
+              <a href="#" class="link portfolio-cards">
+                <div class="container-img-portfolio">
+                  <img src="./images/img-docs-3.jpg" alt="photo" width="360">
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -125,13 +120,13 @@
                 <div class="container-portfolio">
                   <h2 class="portfolio-title">Meditation App</h2>
                   <p class="portfolio-paragraph">App</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="img-portfolio">
-              <a href="" class="link portfolio-cards"
+              <a href="#" class="link portfolio-cards"
                 ><div class="container-img-portfolio">
-                  <img src="./images/img-docs-4.jpg" alt="photo" width="360" />
+                  <img src="./images/img-docs-4.jpg" alt="photo" width="360">
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -141,13 +136,13 @@
                 <div class="container-portfolio">
                   <h2 class="portfolio-title">Taxi Service</h2>
                   <p class="portfolio-paragraph">Marketing</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="img-portfolio">
-              <a href="" class="link portfolio-cards"
+              <a href="#" class="link portfolio-cards"
                 ><div class="container-img-portfolio">
-                  <img src="./images/img-docs-5.jpg" alt="photo" width="360" />
+                  <img src="./images/img-docs-5.jpg" alt="photo" width="360">
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -157,13 +152,13 @@
                 <div class="container-portfolio">
                   <h2 class="portfolio-title">Screen Illustrations</h2>
                   <p class="portfolio-paragraph">Design</p>
-                </div></a
-              >
+                </div>
+                </a>
             </li>
             <li class="img-portfolio">
-              <a href="" class="link portfolio-cards"
+              <a href="#" class="link portfolio-cards"
                 ><div class="container-img-portfolio">
-                  <img src="./images/img-docs-6.jpg" alt="photo" width="360" />
+                  <img src="./images/img-docs-6.jpg" alt="photo" width="360">
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -173,13 +168,13 @@
                 <div class="container-portfolio">
                   <h2 class="portfolio-title">Online Courses</h2>
                   <p class="portfolio-paragraph">Marketing</p>
-                </div></a
-              >
+                </div>
+                </a>
             </li>
             <li class="img-portfolio">
-              <a href="" class="link portfolio-cards">
+              <a href="#" class="link portfolio-cards">
                 <div class="container-img-portfolio">
-                  <img src="./images/img-docs-7.jpg" alt="photo" width="360" />
+                  <img src="./images/img-docs-7.jpg" alt="photo" width="360">
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -189,13 +184,13 @@
                 <div class="container-portfolio">
                   <h2 class="portfolio-title">Instagram Stories Concept</h2>
                   <p class="portfolio-paragraph">Design</p>
-                </div></a
-              >
+                </div>
+                </a>
             </li>
             <li class="img-portfolio">
-              <a href="" class="link portfolio-cards">
+              <a href="#" class="link portfolio-cards">
                 <div class="container-img-portfolio">
-                  <img src="./images/img-docs-8.jpg" alt="photo" width="360" />
+                  <img src="./images/img-docs-8.jpg" alt="photo" width="360">
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -205,13 +200,13 @@
                 <div class="container-portfolio">
                   <h2 class="portfolio-title">Organic Food</h2>
                   <p class="portfolio-paragraph">Web Site</p>
-                </div></a
-              >
+                </div>
+                </a>
             </li>
             <li class="img-portfolio">
-              <a href="" class="link portfolio-cards"
-                ><div class="container-img-portfolio">
-                  <img src="./images/img-docs-9.jpg" alt="photo" width="360" />
+              <a href="#" class="link portfolio-cards">
+                <div class="container-img-portfolio">
+                  <img src="./images/img-docs-9.jpg" alt="photo" width="360">
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -221,8 +216,8 @@
                 <div class="container-portfolio">
                   <h2 class="portfolio-title">Fresh Coffee</h2>
                   <p class="portfolio-paragraph">Web Site</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -232,8 +227,8 @@
       <div class="container">
         <div class="footer-container">
           <a class="link footer-logo" href="./index.html"
-            >Web<span class="span-footer">Studio</span></a
-          >
+            >Web<span class="span-footer">Studio</span>
+          </a>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
@@ -243,29 +238,29 @@
           <p class="footer-paragraph">Social media</p>
           <ul class="footer-list">
             <li class="footer-item">
-              <a class="footer-link" href=""
-                ><svg width="24" height="24" class="svg-footer">
+              <a class="footer-link" href="#">
+                <svg width="24" height="24" class="svg-footer">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
             </li>
             <li class="footer-item">
-              <a class="footer-link" href=""
-                ><svg width="24" height="24" class="svg-footer">
+              <a class="footer-link" href="#">
+                <svg width="24" height="24" class="svg-footer">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
             </li>
             <li class="footer-item">
-              <a class="footer-link" href=""
-                ><svg width="24" height="24" class="svg-footer">
+              <a class="footer-link" href="#">
+                <svg width="24" height="24" class="svg-footer">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
             </li>
             <li class="footer-item">
-              <a class="footer-link" href=""
-                ><svg width="24" height="24" class="svg-footer">
+              <a class="footer-link" href="#">
+                <svg width="24" height="24" class="svg-footer">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
@@ -276,15 +271,9 @@
         <p class="paragraph-form">Subscribe</p>
         <form class="footer-frame">
           <label class="footer-label" for="user-email">
-            <input
-              class="footer-input"
-              name="user-email"
-              type="email"
-              placeholder="E-mail"
-              id="user-email"/>
+            <input class="footer-input" name="user-email" type="email" placeholder="E-mail" id="user-email">
           </label>
-          <button class="footer-btn" type="submit">
-            Subscribe<svg class="svg-subscribe" width="24" height="24">
+          <button class="footer-btn" type="submit">Subscribe<svg class="svg-subscribe" width="24" height="24">
               <use href="./images/icons.svg#icon-icon-send"></use>
             </svg>
           </button>
