--- a/index.html
+++ b/index.html
@@ -20,35 +20,37 @@
     <title>WebStudio</title>
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <div class="container">
         <nav class="list header-nav">
-          <a class="header-logo link list" href="./index.html">Web<span class="logo-span">Studio</span>
+          <a class="header-logo-link link list" href="./index.html">Web<span class="logo-span">Studio</span>
           </a>
           <ul class="list header-list">
             <li class="header-menu-item">
-              <a class="link header-item current" href="./index.html">Studio</a>
+              <a class="link header-menu-link current" href="./index.html">Studio</a>
             </li>
             <li class="header-menu-item">
-              <a class="link header-item" href="./portfolio.html">Portfolio</a>
+              <a class="link header-menu-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="header-menu-item">
-              <a class="link header-item" href="">Contacts</a>
+              <a class="link header-menu-link" href="#">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="address">
           <ul class="list header-list">
-            <li class="header-address">
-              <a class="link header-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="header-address-item">
+              <a class="link header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="header-address">
-              <a class="link header-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <li class="header-address-item">
+              <a class="link header-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
       </div>
     </header>
+    <!-- Main -->
     <main class="main">
       <!-- Section-1 -->
       <section class="section-one">
@@ -63,51 +65,51 @@
       <section class="section-two">
         <div class="container">
           <h2 class="visually-hidden">Tittle 2 Test</h2>
-          <ul class="section-list list">
-            <li class="section-two-link">
+          <ul class="section-two-list list">
+            <li class="section-two-item">
               <div class="icon">
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </div>
-              <h3 class="main-title-list">Strategy</h3>
-              <p class="main-text">
+              <h3 class="section-two-title">Strategy</h3>
+              <p class="section-two-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="section-two-link">
+            <li class="section-two-item">
               <div class="icon">
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
-              <h3 class="main-title-list">Punctuality</h3>
-              <p class="main-text">
+              <h3 class="section-two-title">Punctuality</h3>
+              <p class="section-two-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="section-two-link">
+            <li class="section-two-item">
               <div class="icon">
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
-              <h3 class="main-title-list">Diligence</h3>
-              <p class="main-text">
+              <h3 class="section-two-title">Diligence</h3>
+              <p class="section-two-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="section-two-link">
+            <li class="section-two-item">
               <div class="icon">
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
-              <h3 class="main-title-list">Technologies</h3>
-              <p class="main-text">
+              <h3 class="section-two-title">Technologies</h3>
+              <p class="section-two-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -119,14 +121,14 @@
       <section class="section-three">
         <div class="container">
           <h2 class="main-title-text">What are we doing</h2>
-          <ul class="section-list list">
-            <li class="link-communications">
+          <ul class="section-three-list list">
+            <li class="item-communications">
               <img src="./images/Rectangle71.jpg" alt="computer" width="360">
             </li>
-            <li class="link-communications">
+            <li class="item-communications">
               <img src="./images/Rectangle71-2.jpg" alt="telephone" width="360"/>
             </li>
-            <li class="link-communications">
+            <li class="item-communications">
               <img src="./images/Rectangle-3.jpg" alt="phone-and-computer" width="360">
             </li>
           </ul>
@@ -136,36 +138,36 @@
       <section class="section-team">
         <div class="container">
           <h2 class="main-title-text">Our Team</h2>
-          <ul class="section-list list">
+          <ul class="section-team-list list">
             <li class="section-item">
               <img src="./images/img-1.jpg" alt="man" width="264">
               <div class="our-team">
-                <h3 class="main-title-list">Mark Guerrero</h3>
+                <h3 class="section-team-title">Mark Guerrero</h3>
                 <p class="text-description">Product Designer</p>
                 <ul class="icon-list">
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
@@ -177,32 +179,32 @@
             <li class="section-item">
               <img src="./images/img-2.jpg" alt="man" width="264">
               <div class="our-team">
-                <h3 class="main-title-list">Tom Ford</h3>
+                <h3 class="section-team-title">Tom Ford</h3>
                 <p class="text-description">Frontend Developer</p>
                 <ul class="icon-list">
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
@@ -214,32 +216,32 @@
             <li class="section-item">
               <img src="./images/img-3.jpg" alt="women" width="264">
               <div class="our-team">
-                <h3 class="main-title-list">Camila Garcia</h3>
+                <h3 class="section-team-title">Camila Garcia</h3>
                 <p class="text-description">Marketing</p>
                 <ul class="icon-list">
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
@@ -251,32 +253,32 @@
             <li class="section-item">
               <img src="./images/img-4.jpg" alt="man" width="264">
               <div class="our-team">
-                <h3 class="main-title-list">Daniel Wilson</h3>
+                <h3 class="section-team-title">Daniel Wilson</h3>
                 <p class="text-description">UI Designer</p>
                 <ul class="icon-list">
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
-                    <a class="icon-link" href="">
+                    <a class="icon-link" href="#">
                       <svg width="16" height="16" class="svg-team">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
@@ -294,42 +296,42 @@
           <h2 class="title-five">Customers</h2>
           <ul class="clients-list">
             <li class="clients-item">
-              <a class="clients-link" href="">
+              <a class="clients-link" href="#">
                 <svg width="104" height="56" class="svg-clients">
                   <use href="./images/icons.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
-              <a class="clients-link" href="">
+              <a class="clients-link" href="#">
                 <svg width="104" height="56" class="svg-clients">
                   <use href="./images/icons.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
-              <a class="clients-link" href="">
+              <a class="clients-link" href="#">
                 <svg width="104" height="56" class="svg-clients">
                   <use href="./images/icons.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
-              <a class="clients-link" href="">
+              <a class="clients-link" href="#">
                 <svg width="104" height="56" class="svg-clients">
                   <use href="./images/icons.svg#icon-Client-4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
-              <a class="clients-link" href="">
+              <a class="clients-link" href="#">
                 <svg width="104" height="56" class="svg-clients">
                   <use href="./images/icons.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
-              <a class="clients-link" href="">
+              <a class="clients-link" href="#">
                 <svg width="104" height="56" class="svg-clients">
                   <use href="./images/icons.svg#icon-Logo-4"></use>
                 </svg>
