--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
+      <link rel="stylesheet" href="./css/styles.css" />
+      <link rel="stylesheet" href="./css/media.css" />
     <title>WebStudio</title>
   </head>
   <body>
     <!-- Header -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container">
         <nav class="list header-nav">
           <a class="header-logo-link link list" href="./index.html">Web<span class="logo-span">Studio</span>
@@ -49,18 +49,18 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <!-- Main -->
     <main class="main">
       <!-- Section-1 -->
-      <section class="section-one">
+      <!-- <section class="section-one">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="text-btn header-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- Section-2 -->
       <section class="section-two">
         <div class="container">
@@ -135,7 +135,7 @@
         </div>
       </section>
       <!-- Section-4 -->
-      <section class="section-team">
+      <!-- <section class="section-team">
         <div class="container">
           <h2 class="main-title-text">Our Team</h2>
           <ul class="section-team-list list">
@@ -289,9 +289,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!---Section-5--->
-      <section class="section-five">
+      <!-- <section class="section-five">
         <div class="container">
           <h2 class="title-five">Customers</h2>
           <ul class="clients-list">
@@ -339,10 +339,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer-container">
           <a class="link footer-logo" href="./index.html">Web<span class="span-footer">Studio</span>
@@ -394,7 +394,7 @@
         </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
             <!-- Modal-window -->
     <div class="container-modal is-hidden" data-modal>
       <div class="modal-window">
