--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
       </section>
     </main>
     <!-- Footer -->
-    <!-- <footer class="footer">
+   <footer class="footer">
       <div class="container">
         <div class="footer-container">
           <a class="link footer-logo" href="./index.html">Web<span class="span-footer">Studio</span>
@@ -462,7 +462,7 @@
         </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
             <!-- Modal-window -->
     <div class="container-modal is-hidden" data-modal>
       <div class="modal-window">
