--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                 <use href="./images/icons.svg#icon-check-mark">
                 </use>
               </svg>
-            </span>I accept the terms and conditions of the<a class="modal-check-link" href="">Privacy Policy</a>
+            </span><span>I accept the terms and conditions of the<a class="modal-check-link" href="">Privacy Policy</a></span>
           </label>
           </div>
           <button class="modal-btn-send" type="submit">Send</button>
@@ -522,5 +522,11 @@
     
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
