--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,12 @@
             <li class="img-portfolio">
               <a href="#" class="link portfolio-cards">
                 <div class="container-img-portfolio">
-                  <img src="./images/img-docs.jpg" alt="photo" width="360">
+                  <picture>
+                    <source srcset="./images/img.portfolio/img-desktop-1-1x.jpg 1x, ./images/img.portfolio/img-desktop-1-2x.jpg 2x" media="(min-width: 1158px)">
+                    <source srcset="./images/img.portfolio/img-tab-1-1x.jpg 1x, ./images/img.portfolio/img-tab-1-2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/img.portfolio/img-mob-1-1x.jpg 1x, ./images/img.portfolio/img-mob-1-2x.jpg 2x" media="(min-width: 320px)">
+                    <img src="./images/img-docs.jpg" alt="photo" width="396">
+                  </picture>
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -163,7 +168,12 @@
             <li class="img-portfolio">
               <a href="#" class="link portfolio-cards">
                 <div class="container-img-portfolio">
-                  <img src="./images/img-docs-2.jpg" alt="photo" width="360">
+                  <picture>
+                    <source srcset="./images/img.portfolio/img-desktop-2-1x.jpg 1x, ./images/img.portfolio/img-desktop-2-2x.jpg 2x" media="(min-width: 1158px)">
+                    <source srcset="./images/img.portfolio/img-tab-2-1x.jpg 1x, ./images/img.portfolio/img-tab-2-2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/img.portfolio/img-mob-2-1x.jpg 1x, ./images/img.portfolio/img-mob-2-2x.jpg 2x" media="(min-width: 320px)">
+                    <img src="./images/img-docs-2.jpg" alt="photo" width="396">
+                  </picture>
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -179,7 +189,12 @@
             <li class="img-portfolio">
               <a href="#" class="link portfolio-cards">
                 <div class="container-img-portfolio">
-                  <img src="./images/img-docs-3.jpg" alt="photo" width="360">
+                  <picture>
+                    <source srcset="./images/img.portfolio/img-desktop-3-1x.jpg 1x, ./images/img.portfolio/img-desktop-3-2x.jpg 2x" media="(min-width: 1158px)">
+                    <source srcset="./images/img.portfolio/img-tab-3-1x.jpg 1x, ./images/img.portfolio/img-tab-3-2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/img.portfolio/img-mob-3-1x.jpg 1x, ./images/img.portfolio/img-mob-3-2x.jpg 2x" media="(min-width: 320px)">
+                    <img src="./images/img-docs-3.jpg" alt="photo" width="396">
+                  </picture>
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -195,7 +210,12 @@
             <li class="img-portfolio">
               <a href="#" class="link portfolio-cards"
                 ><div class="container-img-portfolio">
-                  <img src="./images/img-docs-4.jpg" alt="photo" width="360">
+                  <picture>
+                    <source srcset="./images/img.portfolio/img-desktop-4-1x.jpg 1x, ./images/img.portfolio/img-desktop-4-2x.jpg 2x" media="(min-width: 1158px)">
+                    <source srcset="./images/img.portfolio/img-tab-4-1x.jpg 1x, ./images/img.portfolio/img-tab-4-2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/img.portfolio/img-mob-4-1x.jpg 1x, ./images/img.portfolio/img-mob-4-2x.jpg 2x" media="(min-width: 320px)">
+                    <img src="./images/img-docs-4.jpg" alt="photo" width="396">
+                  </picture>
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -211,7 +231,12 @@
             <li class="img-portfolio">
               <a href="#" class="link portfolio-cards"
                 ><div class="container-img-portfolio">
-                  <img src="./images/img-docs-5.jpg" alt="photo" width="360">
+                  <picture>
+                    <source srcset="./images/img.portfolio/img-desktop-5-1x.jpg 1x, ./images/img.portfolio/img-desktop-5-2x.jpg 2x" media="(min-width: 1158px)">
+                    <source srcset="./images/img.portfolio/img-tab-5-1x.jpg 1x, ./images/img.portfolio/img-tab-5-2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/img.portfolio/img-mob-5-1x.jpg 1x, ./images/img.portfolio/img-mob-5-2x.jpg 2x" media="(min-width: 320px)">
+                    <img src="./images/img-docs-5.jpg" alt="photo" width="396">
+                  </picture>
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -227,7 +252,12 @@
             <li class="img-portfolio">
               <a href="#" class="link portfolio-cards"
                 ><div class="container-img-portfolio">
-                  <img src="./images/img-docs-6.jpg" alt="photo" width="360">
+                  <picture>
+                    <source srcset="./images/img.portfolio/img-desktop-6-1x.jpg 1x, ./images/img.portfolio/img-desktop-6-2x.jpg 2x" media="(min-width: 1158px)">
+                    <source srcset="./images/img.portfolio/img-tab-6-1x.jpg 1x, ./images/img.portfolio/img-tab-6-2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/img.portfolio/img-mob-6-1x.jpg 1x, ./images/img.portfolio/img-mob-6-2x.jpg 2x" media="(min-width: 320px)">
+                    <img src="./images/img-docs-6.jpg" alt="photo" width="396">
+                  </picture>
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -243,7 +273,12 @@
             <li class="img-portfolio">
               <a href="#" class="link portfolio-cards">
                 <div class="container-img-portfolio">
-                  <img src="./images/img-docs-7.jpg" alt="photo" width="360">
+                  <picture>
+                    <source srcset="./images/img.portfolio/img-desktop-7-1x.jpg 1x, ./images/img.portfolio/img-desktop-7-2x.jpg 2x" media="(min-width: 1158px)">
+                    <source srcset="./images/img.portfolio/img-tab-7-1x.jpg 1x, ./images/img.portfolio/img-tab-7-2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/img.portfolio/img-mob-7-1x.jpg 1x, ./images/img.portfolio/img-mob-7-2x.jpg 2x" media="(min-width: 320px)">
+                    <img src="./images/img-docs-7.jpg" alt="photo" width="396">
+                  </picture>
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -259,7 +294,12 @@
             <li class="img-portfolio">
               <a href="#" class="link portfolio-cards">
                 <div class="container-img-portfolio">
-                  <img src="./images/img-docs-8.jpg" alt="photo" width="360">
+                  <picture>
+                    <source srcset="./images/img.portfolio/img-desktop-8-1x.jpg 1x, ./images/img.portfolio/img-desktop-8-2x.jpg 2x" media="(min-width: 1158px)">
+                    <source srcset="./images/img.portfolio/img-tab-8-1x.jpg 1x, ./images/img.portfolio/img-tab-8-2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/img.portfolio/img-mob-8-1x.jpg 1x, ./images/img.portfolio/img-mob-8-2x.jpg 2x" media="(min-width: 320px)">
+                    <img src="./images/img-docs-8.jpg" alt="photo" width="396">
+                  </picture>
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -275,7 +315,12 @@
             <li class="img-portfolio">
               <a href="#" class="link portfolio-cards">
                 <div class="container-img-portfolio">
-                  <img src="./images/img-docs-9.jpg" alt="photo" width="360">
+                  <picture>
+                    <source srcset="./images/img.portfolio/img-desktop-9-1x.jpg 1x, ./images/img.portfolio/img-desktop-9-2x.jpg 2x" media="(min-width: 1158px)">
+                    <source srcset="./images/img.portfolio/img-tab-9-1x.jpg 1x, ./images/img.portfolio/img-tab-9-2x.jpg 2x" media="(min-width: 768px)">
+                    <source srcset="./images/img.portfolio/img-mob-9-1x.jpg 1x, ./images/img.portfolio/img-mob-9-2x.jpg 2x" media="(min-width: 320px)">
+                    <img src="./images/img-docs-9.jpg" alt="photo" width="396">
+                  </picture>
                   <p class="text-new-portfolio">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -351,5 +396,11 @@
       </div>
     </footer>
     <script src="./js/menu.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
